# cpp-statsd-client

./: CMakeLists.txt
include/cpp-statsd-client/: UDPSender.hpp
tests/: testStatsdClient.cpp
